--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.3'
-
 services:
   httpserver:
     build:
@@ -35,15 +33,27 @@ services:
     image: migrate/migrate
     volumes:
       - ./migrations:/migrations
-    command: ["-path", "/migrations", "-database",  "mysql://root:password@tcp(mysql:3306)/goboilerplate", "up"]
+    command:
+      [
+        "-path",
+        "/migrations",
+        "-database",
+        "mysql://root:password@tcp(mysql:3306)/goboilerplate",
+        "up",
+      ]
 
   mysql:
-    image: mysql:5.7
+    image: mysql:8.0
     container_name: goboilerplate-mysql
+    command: mysqld --default-authentication-plugin=mysql_native_password --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     environment:
-      - MYSQL_ROOT_PASSWORD=password
-      - MYSQL_DATABASE=goboilerplate
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: goboilerplate
+      #      MYSQL_USER: sandbox_user
+      #      MYSQL_PASSWORD: passpass
+      MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
     volumes:
       - .mysqldb:/var/lib/mysql:rw
     ports:
       - 3306:3306
+
